HISTORY
=======
Main changes

[horizontal]
*2011/12/30*:: Add Allow retrieving unparsed entities after parsing with callback in Xml_Parser V27.0,
Xml_Parser.Generator V9.2 and xml_checker V15.2

*2011/12/30*:: Chg major documentations into txt format for asciidoc

*2011/11/28*:: Add normalization of reals

*2011/10/31*:: Big change: Con_Io provides objects Console and Window

*2011/10/19*:: Remove Lf between outputs of grep mode when not default and multiple regex in asubst, V13.0

*2011/10/18*:: Add support of mouse in sokoban menu

*2011/10/11*:: Keep DTD even if no expand, in Xml_Parser V26.9

*2011/10/05*:: Don't change DTD file path when it is explicitly provided, in Xml_Parser V26.8

*2011/10/04*:: Add env variable for configuration file of agite, V3.7
+
Add viewing of files in the commit where they are deleted in agite, V3.6

*2011/09/30*:: Add error handling of Chdir and fix error handling when no next instruction in tcpchat

*2011/09/28*:: Add instruction chdir in tcpchat
+
Fix handling of copied and moved files in agite, V3.4
+
Fix -- in texi files
+
Add option --skip_dirs to als, V7.0

*2011/08/29*:: Add a new mode to show the dependency path between two units in lsadeps, V7.0

*2011/08/25*:: Add option for dependency between specs only in lsadeps, V6.0

*2011/08/24*:: Add co-located units hidding remote ones in lsadeps, V5.0

*2011/08/23*:: Add support of recursive includes in lsadeps, V4.0

*2011/08/12*:: Add operation Overwrite to bounded and unbounded strings
+
Add mcd operations strnull, strins and strovw (i.o. strrep, which is fixed)

*2011/08/12*:: Add mcd operations read and callbrk

*2011/07/04*:: Add mcd timeof returns False if string is properly formatted but invalid

*2011/06/28*:: Add optional path to lsadeps target

*2011/06/20*:: Fix heart graph use of Xor mode

*2011/05/04*:: Chg Major documentations into texi format

*2011/04/14*:: Add option --dotall (remove --display) that allows '.' to match '\n' in asubst, V12.0
+